--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -40,8 +40,17 @@
                 <div class="form-group">
                   <button class="btn btn-primary submit-btn btn-block" 
                         type="submit" 
-                        [disabled]="loginForm.invalid">
+                        [disabled]="loginForm.invalid"
+                        *ngIf="!loading">
                     Login
+                  </button>
+
+                  <button type="button"                           
+                          [disabled]="true"
+                          class="btn btn-primary submit-btn btn-block"
+                          *ngIf="loading">
+                    <i class="fa fa-spin fa-sync"></i>
+                    Espere...
                   </button>
                 </div>
                 
