--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -47,10 +47,19 @@
               </div>
 
               <div class="form-group">
-                <button type="submit" 
-                        [disabled]="registroForm.invalid"
-                        class="btn btn-primary submit-btn btn-block">
+                <button type="submit"
+                        [disabled]="registroForm.invalid" 
+                        class="btn btn-primary submit-btn btn-block" 
+                        *ngIf="!loading">                        
                   Crear cuenta
+                </button>
+                
+                <button type="button" 
+                        [disabled]="true" 
+                        class="btn btn-primary submit-btn btn-block" 
+                        *ngIf="loading">
+                  <i class="fa fa-spin fa-sync"></i>
+                  Espere...
                 </button>
               </div>
               <div class="text-block text-center my-3">
